bk_ida/sjengida/c3/gen
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/gen/src/moves.c:1104:6: error: use of undeclared identifier 'dword_66859C'
if ( dword_66859C[v23] ) 
     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/gen/src/moves.c:1119:6: error: use of undeclared identifier 'dword_66859C'
if ( dword_66859C[v23] ) 
     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/gen/src/moves.c:1308:6: error: use of undeclared identifier 'dword_66859C'
if ( dword_66859C[v6] ) 
     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/gen/src/moves.c:1323:6: error: use of undeclared identifier 'dword_66859C'
if ( dword_66859C[v6] ) 
     ^
4 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/gen/src/obj/moves.o] Error 1
